--- a/fast_face_recognition.ipynb
+++ b/fast_face_recognition.ipynb
@@ -6793,6 +6793,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Vector Comparison:** Once the images are represented as sets of vectors, you can calculate the Euclidean distance between corresponding pixels in the two images. \n",
+    "\n",
+    "    Euclidean Distance = √((A₁ - B₁)² + (A₂ - B₂)² + ... + (Aₙ - Bₙ)²)\n",
+    "- Here, A₁, A₂, ..., Aₙ represent the vector components (e.g., pixel values) of the first image.\n",
+    "- B₁, B₂, ..., Bₙ represent the corresponding vector components of the second image.\n",
+    "\n",
+    "\n",
+    "**Image Comparison:** After calculating the Euclidean distance for each pair of corresponding pixels, you can use these distances to determine the overall similarity or dissimilarity between the two images. Smaller Euclidean distances indicate greater similarity, while larger distances indicate greater dissimilarity."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
@@ -6848,6 +6862,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Manhattan distance** is another way to measure the distance between two points or vectors, similar to Euclidean distance. However, it calculates the distance by summing the absolute differences between the corresponding components of the vectors, as if you were navigating a city grid like a taxi driver on a grid-like street layout.\n",
+    "\n",
+    "Here's a breakdown as to how Manhattan distance works with vectors:\n",
+    "\n",
+    "**Vectors and Components:** Just like with Euclidean distance, you start with two vectors, let's call them vector A and vector B. Each vector has components, which could represent various attributes or quantities.\n",
+    "Calculating Manhattan Distance: To find the Manhattan distance between these two vectors, you sum up the absolute differences between their corresponding components.\n",
+    "\n",
+    "The formula for Manhattan distance is:<br>\n",
+    "\n",
+    "        Manhattan Distance = |A₁ - B₁| + |A₂ - B₂| + ... + |Aₙ - Bₙ|\n",
+    "        - A₁, A₂, ..., Aₙ are the components of vector A.\n",
+    "        - B₁, B₂, ..., Bₙ are the components of vector B.\n",
+    "        - |x| denotes the absolute value of x.\n",
+    "\n",
+    "**Interpretation:** Think of it like navigating a city grid. When you travel from one point to another in a city with streets that run north-south and east-west (like Manhattan in New York), you can't take a direct diagonal path like in Euclidean distance. Instead, you have to move along the grid lines, which results in a distance measured along the streets."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 73,
    "metadata": {},
@@ -6897,6 +6932,40 @@
    "metadata": {},
    "source": [
     "### Cosine Similarity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Cosine similarity** is a mathematical measure used to determine how similar two non-zero vectors are, particularly in the context of high-dimensional spaces like text documents or feature vectors in machine learning. It measures the cosine of the angle between these vectors, which indicates their similarity.\n",
+    "\n",
+    "Here's how cosine similarity works:\n",
+    "\n",
+    "**Vector Representation:** Imagine you have two vectors, let's call them vector A and vector B. These vectors could represent various things, such as document features, user preferences, or any set of numerical values.\n",
+    "**Calculating Cosine Similarity:** To calculate the cosine similarity between these two vectors, you follow these steps:\n",
+    "- a. Compute the dot product of the two vectors A and B. The dot product is calculated by multiplying the corresponding components of the vectors and then summing them up:\n",
+    "*Dot Product* = A₁ * B₁ + A₂ * B₂ + ... + Aₙ * Bₙ\n",
+    "- b. Calculate the magnitudes (lengths) of each vector A and B. The magnitude of a vector is determined by taking the square root of the sum of the squares of its components:\n",
+    "\n",
+    "                     Magnitude of A = √(A₁² + A₂² + ... + Aₙ²)\n",
+    "                     Magnitude of B = √(B₁² + B₂² + ... + Bₙ²)\n",
+    "                   \n",
+    "- c. Finally, calculate the cosine similarity as the cosine of the angle θ between vectors A and B:\n",
+    "\n",
+    "\n",
+    "      Cosine Similarity =  (Dot Product) / (Magnitude of A * Magnitude of B)\n",
+    "\n",
+    "*You can also represent this as:*\n",
+    "\n",
+    "\n",
+    "     Cosine Similarity = (A₁ * B₁ + A₂ * B₂ + ... + Aₙ * Bₙ) / (√(A₁² + A₂² + ... + Aₙ²) * √(B₁² + B₂² + ... + Bₙ²))\n",
+    "\n",
+    "\n",
+    "**Interpretation:** Cosine similarity measures the cosine of the angle between the two vectors, and it ranges from -1 to 1.\n",
+    "- A cosine similarity of 1 indicates that the vectors are identical or pointing in the same direction.\n",
+    "- A cosine similarity of 0 means that the vectors are orthogonal (perpendicular), indicating no similarity.\n",
+    "- A cosine similarity of -1 indicates that the vectors are diametrically opposed or pointing in opposite directions."
    ]
   },
   {
